Change to Map#copyOf
Closes #182